moved namespace panel title to namespace bar chart; fixed scrollbar styles

--- a/pkg/ui/src/containers/Overview.scss
+++ b/pkg/ui/src/containers/Overview.scss
@@ -2,12 +2,27 @@
 .overview {
   .list-contents {
     overflow-y: auto;
-  }
-}
-
-.overview {
-  .list-contents {
     height: calc(100vh - 565px) !important;
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      border-radius: 10px;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar {
+        width: 12px;
+        background-color: transparent;
+        z-index: 1500;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        background-color: #444;
+    }
+
   }
 }
 
